Primeira implementação do carrossel de certificados

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav img:hover{
   transform: scale(1.2);
 }
 
-.principal, .portifolio{
+.principal{
   margin: 35px 55px 280px  55px;
 }
 
@@ -77,13 +77,14 @@ nav img:hover{
   color: var(--cor-secundaria);
 }
 
-.sobre{
+.sobre, .redes-sociais{
   position: relative;
   background: var(--cor-destaque);
   text-align: center;
+  padding-bottom: 70px;
 }
 
-.sobre-titulo, .portifolio-titulo{
+.sobre-titulo, .redes-sociais-titulo{
   padding: 30px;
   font-style: normal;
   font-weight: 600;
@@ -125,6 +126,10 @@ nav img:hover{
   padding: 0 0 30px 0;
 }
 
+.portifolio{
+  margin: 35px 55px 250px  55px;
+}
+
 .portifolio-titulo{
   position: relative;
   text-align: center;
@@ -135,12 +140,22 @@ nav img:hover{
   justify-content: space-around;
 }
 
+.portifolio-titulo{
+  margin: 0 0 30px 0;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 56px;
+}
+
 .portifolio-card article{
-  border: 4px solid var(--cor-destaque);
-  border-radius: 10px;
+  border: 2px solid var(--cor-destaque);
+  border-radius: 25px;
   padding: 10px;
   background: var(--cor-terciaria);
   transition: 0.5s;
+  height: 300px;
+  width: 235px;
 }
 
 .portifolio-card article:hover{
@@ -170,4 +185,86 @@ nav img:hover{
   font-size: 20px;
 }
 
+.detaques{
+  background: var(--cor-destaque);
+}
 
+.slider {
+  display: block;
+  height: 293px;
+  width: 600px;
+  margin: auto;
+  margin-top: 20px;
+  position: relative;
+}
+
+.slider li {
+  list-style: none;
+  position: absolute;
+}
+
+.slider img {
+  margin: auto;
+  height: 100%;
+  width: 100%;
+  vertical-align: top;
+}
+.slider input {
+  display: none;
+}
+.slider label {
+  background-color: #000;
+  bottom: 10px;
+  cursor: pointer;
+  display: block;
+  height: 10px;
+  position: absolute;
+  width: 10px;
+  z-index: 10;
+}
+
+.slider li:nth-child(1) label {
+  left: 10px;
+}
+
+.slider li:nth-child(2) label {
+  left: 40px;
+}
+
+.slider li:nth-child(3) label {
+  left: 70px;
+}
+
+.slider img {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.slider li input:checked ~ img {
+  opacity: 1;
+  visibility: visible;
+  z-index: 10;
+}
+
+.redes-sociais img{
+  width: 50px;
+  height: 50px;
+  transition: 0.5s;
+  margin: 0 10px;
+}
+
+.redes-sociais img:hover{
+  transform: scale(1.2);
+}
+
+footer{
+  position: relative;
+  background: var(--cor-destaque);
+  padding: 30px;
+  text-align: center;
+}
+
+footer p{
+  font-size: 20px;
+  color: var(--cor-secundaria);
+}
